hphp/hack/test/typecheck/aktuple/unify_error2.php.exp
ERROR: File "unify_error2.php", line 13, characters 14-18:
Invalid argument (Typing[4110])
  File "unify_error2.php", line 3, characters 21-25:
  Expected `float`
  File "unify_error2.php", line 10, characters 14-17:
  But got `num`
ERROR: File "unify_error2.php", line 13, characters 14-18:
Invalid argument (Typing[4110])
  File "unify_error2.php", line 3, characters 21-25:
  Expected `float`
  File "unify_error2.php", line 10, characters 20-24:
  But got `string`
